# gomibako-theme-maupassant

./: CMakeLists.txt  README.md  custom_sidebar.html
src/: archives.cc  article.cc  custom_page.cc  error.cc  layout.hpp  main.cc  page.cc  tag.cc  tags.cc
static/css/: style.css
