cmake_minimum_required (VERSION 3.1.0 FATAL_ERROR)
project (gomibako-theme-maupassant CXX)
set (GOMIBAKO_DIRECTORY "" CACHE FILEPATH "Path to the directory of gomibako")
set (CMAKE_INSTALL_PREFIX ${GOMIBAKO_DIRECTORY})
include_directories (${GOMIBAKO_DIRECTORY}/include)
aux_source_directory (src DIR_SRCS)
add_library (theme_maupassant SHARED ${DIR_SRCS})
set_property (TARGET theme_maupassant PROPERTY CXX_STANDARD 11)
set_property (TARGET theme_maupassant PROPERTY CXX_STANDARD_REQUIRED ON)
install (TARGETS theme_maupassant DESTINATION theme)
install (DIRECTORY static/css DESTINATION theme/maupassant_static)
install (DIRECTORY static/img DESTINATION theme/maupassant_static)
install (DIRECTORY static/fonts DESTINATION theme/maupassant_static)